common version complited

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 				<div class="header__inner">
 					<img class="header__logo" src="img/Logo.svg" alt="Logo" />
 
+					<input type="checkbox" id="burger-checkbox" />
+					<label for="burger-checkbox" class="burger">
+						<span></span>
+						<span></span>
+						<span></span>
+					</label>
+
 					<nav class="nav">
 						<ul class="nav__list">
 							<li class="nav__item">
@@ -46,10 +53,111 @@
 		<div class="headline">
 			<div class="container">
 				<h1>Be aware, Manage well.</h1>
-				<p class="text">Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+				<p class="headline__text">Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
 				<button>Find Your Way</button>
 			</div>
 		</div>
+
+		<!-- ABOUT -->
+
+		<section class="about">
+			<div class="container">
+				<div class="about__inner">
+					<div class="about__inner-content">
+						<div class="about__inner-content_title">
+							<h6>How it works</h6>
+							<h3>Understand & Release the stress in 3 steps</h3>
+						</div>
+						<p class="about__inner-content_text">
+							Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your
+							emotions, and guide you in how to manage stress.
+						</p>
+					</div>
+
+					<div class="about__inner-items">
+						<div class="about__inner-item">
+							<div class="about__inner-item_title">
+								<h2>01</h2>
+								<h4>Personalize</h4>
+							</div>
+							<p class="about__inner-items_text">
+								Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!
+							</p>
+							<div class="about__inner-aside">
+								<img class="about__inner-item_img" src="img/about_img1.png" alt="Image" />
+								<img class="about__inner-item_img-2" src="img/about_img1-insert.png" alt="Image" />
+							</div>
+						</div>
+
+						<div class="about__inner-item">
+							<div class="about__inner-item_title">
+								<h2>02</h2>
+								<h4>Write & Understand</h4>
+							</div>
+							<p class="about__inner-items_text">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
+							<img class="about__inner-item_img" src="img/about_img2.png" alt="Image" />
+						</div>
+
+						<div class="about__inner-item">
+							<div class="about__inner-item_title">
+								<h2>03</h2>
+								<h4>Alivio!</h4>
+							</div>
+							<p class="about__inner-items_text">Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
+							<img class="about__inner-item_img" src="img/about_img3.png" alt="Image" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- MEDIA -->
+
+		<section class="media">
+			<div class="container">
+				<div class="media__inner">
+					<div class="media__content">
+						<h3 class="">Let's hear about Kayla's success story</h3>
+						<p class="media__content-text">See how well Alivio works in a real customer’s life.</p>
+						<button>Let’s get started</button>
+					</div>
+					<img src="img/media_video.png" alt="Video" />
+				</div>
+			</div>
+		</section>
+
+		<!-- PRODUCT -->
+
+		<section class="product">
+			<div class="container">
+				<div class="product__inner">
+					<div class="product__item">
+						<img class="product__photo" src="img/card_img-main.png" alt="photo" />
+
+						<div class="product__item_card">
+							<h6 class="product__title">Customized For</h6>
+							<img src="img/card_img-mini.png" alt="photo mini" class="product__img" />
+							<p class="product__img-caption">Mikayla</p>
+							<h5 class="product__list-heading">Your custom contents</h5>
+							<ul class="product__list">
+								<li class="product__list-item">Understand Your Stress</li>
+								<li class="product__list-item">Anger Management</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="product__content">
+						<h6>Our product</h6>
+						<h3>You tell us your stress, We make your diary</h3>
+						<p class="product__content-text">
+							Everyone experiences it, and in different ways. <br />
+							Let Alivio guide you, in a personalized journal experience, to overcome your stress.
+						</p>
+						<button>Find Your Way</button>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- FOOTER -->
 
